--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "vlucas/phpdotenv": "^5.6",
     "infobip/infobip-api-php-client": "^5.1",
     "phpoffice/phpspreadsheet": "^2.1",
-    "dompdf/dompdf": "^3.0"
+    "dompdf/dompdf": "^3.0",
+    "symfony/password-hasher": "^7.1"
   }
 }
